# gcmp

./: Readme.md  meson.build
data/: gschema  meson.build
data/icons/: gresource.xml  meson.build
src/: gcmp-app.c  gcmp-app.h  gcmp-entry.c  gcmp-entry.h  gcmp-mpfr.c  gcmp-mpfr.h  gcmp-tool.c  gcmp-tool.h  gcmp-win.c  gcmp-win.h  main.c
